# sprime

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/sprime/: __init__.py  core.py
tests/: test_worked_example.py
